Complete project import part of helloworld README